munto_docs/DB정합성/v2/챌린지 참여 취소 규칙 명세서.md
# 챌린지 참여/취소 규칙 명세서

> 작성일: 2026-04-16
관련 이슈: WEBB-1321
챌린지 결제/취소 규칙: [챌린지 결제/환불 규칙 명세서](https://www.notion.so/348e2bc7639d807ebd9cf3e13a29258f?pvs=21)
> 

---

## 1. 핵심 개념

### 1-1. 관련 테이블

| 테이블 | 역할 |
| --- | --- |
| `Challenge` | 챌린지 |
| `ChallengeMember` | 참여 멤버. `orderId NOT NULL @unique` |
| `ChallengeRank` | 멤버별 인증 횟수 리더보드 |
| `ChallengeHistory` | 개별 인증 기록 (피드 연결) |
| `Order` | 참여권의 존재 증명. 무료·유료 구분 없이 반드시 존재 |

### 1-2. Challenge 상태

```
PLANNING          관리자 생성 초기 상태
RECRUITING        모집 중 (참여 신청 가능)
CONFIRM_PLAYING   모집 마감, 최소 인원(2명) 충족 → 진행 확정
PLAYING           진행 중 (현재 미사용, 확장 예정)
COMPLETE          종료 완료
CLOSE             호스트 수동 폐강
CLOSE_BY_SYSTEM   최소 인원 미달로 자동 폐강
DELETE            소프트 삭제
EVENT             특수 이벤트 챌린지
```

### 1-3. ChallengeMember 상태

```
REQUEST  가입 신청 (승인제 챌린지)
APPROVE  승인된 활성 참여자
REJECT   호스트에 의한 거절/강퇴
CANCEL   본인 취소 또는 시스템 취소
DELETE   소프트 삭제
```

### 1-4. 모집 방식

```
COMMON (선착순)  가입 즉시 APPROVE. availCount 즉시 차감
CHOICE (인터뷰)  가입 시 REQUEST. 호스트 승인 후 APPROVE. availCount는 승인 시 차감
                 모집 방식을 CHOICE → COMMON으로 변경 시 기존 REQUEST 멤버 전원 자동 취소
```

### 1-5. startDate 제약

```
유저 API (challenge.service.ts):
  - dayOfWeek === 0 (일요일)만 허용. 그 외 요일은 BadRequestException
  - 시각은 클라이언트에서 지정하지 않으므로 실질적으로 00:00:00으로 고정됨
  → 결과적으로 유저가 생성한 챌린지의 startDate는 항상 "일요일 00:00"

어드민 API:
  - 요일/시각 검증 스킵. 임의의 startDate로 생성 가능
  → 스케줄러 창(토요일 23시 ~ 일요일 01시) 밖의 값으로 생성 시
    CONFIRM_PLAYING 전이가 누락될 수 있으므로 주의
```

---

## 2. 핵심 불변식

모든 쓰기 작업은 아래 불변식을 보존해야 한다.
Invariant 1~4는 소셜링 도메인과 공통이며, 순번도 소셜링(`socialing-pseudocode.md` §2)과 맞춘다.
성별 정원 개념은 챌린지에 없으므로 소셜링의 Invariant 2(성별 정원 정합성)는 해당하지 않는다.

### Invariant 1 (정원 정합성)

```

  availCount
  = maximumMembers
  - COUNT(ChallengeMember WHERE status = APPROVE)
  → 항상 0 ≤ availCount ≤ maximumMembers
```

### Invariant 2 (참여권 정합성)

```mermaid
ChallengeMember.orderId IS NOT NULL @unique
  모든 멤버(무료·유료)는 반드시 하나의 Order를 가진다

  Member.status = APPROVE  →  Order 존재, 참여 유효
  Member.status = REQUEST  →  Order 존재, 참여 보류
  Member.status ∈ {CANCEL, REJECT}
                           →  Order 존재, 참여 종료 (환불 처리됨 또는 예정)
```

### Invariant 3 (챌린지 상태별 멤버 정합성)

```
  Challenge.status = CONFIRM_PLAYING  →  ChallengeMember.status ≠ REQUEST
  Challenge.status = CLOSE_BY_SYSTEM  →  ChallengeMember.status ∉ {REQUEST, APPROVE}
  Challenge.status = CLOSE            →  ChallengeMember.status ∉ {REQUEST, APPROVE}
  Challenge.status = COMPLETE         →  ChallengeMember.status ≠ REQUEST
```

### Invariant 4 (미승인 타임아웃)

```sql
  아래 조건 중 하나라도 해당하면 즉시 CANCEL 대상:
    A. status = REQUEST AND updatedAt < NOW() - 24h AND Challenge.status = RECRUITING
    B. status = REQUEST AND Challenge.status ∉ {PLANNING, RECRUITING}
```

### Invariant 5 (최소 인원 — 챌린지 고유)

```sql
  CONFIRM_PLAYING 전이 조건: APPROVE 멤버 수 ≥ MIN_COUNT
  미달 시 CLOSE_BY_SYSTEM으로 전이
  ※ MIN_COUNT = 2로 하드코딩 (challenge.schedule-job.service.ts)
    소셜링의 가변 minimumPerson과 달리 챌린지는 고정값.
```

### Invariant 6 (랭킹-멤버 정합성 — 챌린지 고유)

```markdown
  ChallengeRank는 APPROVE 상태 멤버만 존재한다
  APPROVE → REJECT/CANCEL/DELETE 시 ChallengeRank 삭제
```

### Invariant 7 (본인 취소 가능 구간 — 챌린지 고유)

```markdown
  본인 취소는 Challenge.status = RECRUITING 구간에서만 가능하다.
  CONFIRM_PLAYING 이후의 취소는 호스트/시스템 귀책 폐강을 통해서만 발생한다.

  환불 규칙은 이 불변식과 별개로 [챌린지 결제/환불 규칙 명세서]에서 정의한다:
    - 본인 취소 → 시간 컷오프(당일/30분/4일) 기반
    - 호스트 주도 취소 → 항상 전액 환불 (구간 무관)
    - 시스템 주도 취소 → 항상 전액 환불 (구간 무관) 
```

---

## 3. 상태 전이 규칙

```
Challenge

PLANNING → RECRUITING (관리자 전환)
RECRUITING
  ├→ CONFIRM_PLAYING  (매주 금요일 23시 스케줄러: APPROVE ≥ 2)
  ├→ CLOSE_BY_SYSTEM  (매주 금요일 23시 스케줄러: APPROVE < 2)
  └→ CLOSE            (호스트 수동 폐강)
CONFIRM_PLAYING
  ├→ COMPLETE  (매일 자정 스케줄러: endDate 경과)
  └→ CLOSE     (호스트 수동 폐강)

ChallengeMember

REQUEST
  ├→ APPROVE  (CHOICE: 호스트 승인)
  ├→ REJECT   (CHOICE: 호스트 거절)
  └→ CANCEL   (본인 취소, 24시간 미승인 스케줄러, 챌린지 폐강)

APPROVE
  ├→ REJECT   (호스트 강퇴)
  └→ CANCEL   (본인 취소, 챌린지 폐강/CLOSE_BY_SYSTEM)
```

---

## 4. 참여 신청 플로우

### 4-1. 가입 가능 여부 검증

```
조건 (모두 충족):
  Challenge.status = RECRUITING
  availCount > 0
  startDate > NOW() + 1시간  (시작 1시간 전부터 신청 불가)
  신청 유저가 이미 APPROVE 또는 REQUEST 상태가 아님
```

### 4-2. COMMON (선착순) 가입

```
[단계 A] 가입 가능 여부 검증

[단계 B] 결제 처리 (챌린지 결제/환불 규칙 명세서 참조)

[단계 C] DB 트랜잭션
  [정원 차감 — 원자적 처리]
  updated = tx.Challenge.updateMany(
    WHERE id = challengeId AND availCount > 0,
    DATA { availCount: decrement(1) }
  )
  IF updated.count ≠ 1 → TX ROLLBACK  ← 정원 초과 방어

  ChallengeMember 생성 (status = APPROVE)
  ChallengeRank 생성
  Order.orderStatus = COMPLETED_PAYMENT
  OrderHistory 생성

[단계 D] 후처리 (트랜잭션 외부)
  Sendbird 채널 참여
  Push 발송
```

### 4-3. CHOICE (인터뷰) 가입

```
[단계 A] 가입 가능 여부 검증

[단계 B] 결제 처리 (챌린지 결제/환불 규칙 명세서 참조)

[단계 C] DB 트랜잭션
  ChallengeMember 생성 (status = REQUEST)
  availCount 변동 없음
  Order.orderStatus = COMPLETED_PAYMENT
  OrderHistory 생성

[단계 D] 후처리
  호스트에게 신청 알림 Push 발송
```

---

## 5. 호스트 작업

### 5-1. 멤버 승인 (REQUEST → APPROVE)

```
FUNCTION approve(challengeId, memberId):

  권한: OWNER만 가능

  [선행 검증]
  - member.status = APPROVE → 이미 승인됨, 멱등 처리 후 종료
  - member.status ≠ REQUEST → 승인 불가

  [트랜잭션]
  BEGIN:
    [정원 차감 — 원자적 처리]
    updated = tx.Challenge.updateMany(
      WHERE id = challengeId AND availCount > 0,
      DATA { availCount: decrement(1) }
    )
    IF updated.count ≠ 1 → TX ROLLBACK  ← 정원 없음

    ChallengeMember.status = REQUEST → APPROVE, approvedAt = NOW()
    ChallengeRank 생성
  COMMIT

  [후처리 — 트랜잭션 외부]
  Sendbird 채널 참여
  Push 발송 (H12: 승인 알림)
```

### 5-2. 강퇴 (kick) — APPROVE → REJECT

```
FUNCTION kick(challengeId, memberId):

  권한: OWNER만 가능

  [선행 검증]
  - member.status ≠ APPROVE → 강퇴 불가
  - member.status = REJECT  → 이미 처리됨, 멱등 처리 후 종료

  [트랜잭션]
  BEGIN:
    ChallengeMember.status = APPROVE → REJECT, rejectedAt = NOW()
    Challenge.availCount += 1
    ChallengeRank 삭제
    ChallengeHistory 삭제
  COMMIT

  [후처리 — 트랜잭션 외부]
  결제 취소/환불 처리 (챌린지 결제/환불 규칙 명세서 §3)
  Sendbird 채널 퇴장 (reason = KICK)
  Push 발송 (강퇴 알림)
```

### 5-3. 거절 (reject) — REQUEST → REJECT

```
FUNCTION reject(challengeId, memberId):

  권한: OWNER만 가능

  [선행 검증]
  - member.status ≠ REQUEST → 거절 불가
  - member.status = REJECT  → 이미 처리됨, 멱등 처리 후 종료

  [트랜잭션]
  BEGIN:
    ChallengeMember.status = REQUEST → REJECT, rejectedAt = NOW()
    ← availCount 변화 없음 (REQUEST는 정원 미차지)
  COMMIT

  [후처리 — 트랜잭션 외부]
  결제 취소/환불 처리 (챌린지 결제/환불 규칙 명세서 §3)
  Push 발송 (거절 알림)
```

### 5-4. 챌린지 폐강 (호스트)

```
FUNCTION closeChallengeByHost(challengeId, hostUserId):

  권한: OWNER만 가능

  [선행 검증]
  - Challenge.userId ≠ hostUserId → ForbiddenException
  - Challenge.status ∉ {RECRUITING, CONFIRM_PLAYING} → 폐강 불가

  [단일 트랜잭션 — 상태 전이 원자화]
  BEGIN TX:
    Challenge.status = CLOSE, deletedAt = NOW()

    FOR EACH member WHERE status ∈ {REQUEST, APPROVE}:
      wasApprove = (member.status = APPROVE)
      ChallengeMember.status → CANCEL, canceledAt = NOW()
      IF wasApprove:
        ChallengeRank 삭제
        ChallengeHistory 삭제
        Challenge.availCount += 1
  COMMIT

  Challenge 상태 전이와 모든 멤버 상태 전이를 하나의 TX에 묶어
  부분 실패로 인한 상태 불일치를 방지한다.

  [취소 처리 위임 → 주문 도메인] (TX 외부)
  FOR EACH 유료 멤버:
    PG 환불 실행 (호스트 귀책: OrderClaim = COMPLETED_CANCEL_HOST)
    → 성공: Order.orderStatus → COMPLETED_CANCEL_PAYMENT
    → 실패: Order.orderStatus → FAILED_CANCEL_PAYMENT
            재시도 스케줄러가 복구 (주문/결제 공통 규칙 명세서 5-2)

  [예외 복구 — Sweeper 스케줄러]
  TX 커밋 후 환불 루프 크래시 등으로 "멤버 종료 상태 + Order=COMPLETED_PAYMENT"
  상태 불일치 Order가 발생한 경우, Sweeper 스케줄러가 이를 탐지하여
  FAILED_CANCEL_PAYMENT로 전환 후 기존 재시도 루프에 편입한다 (WEBB-1326).

  [알림]
  이메일/Push 발송 (전 멤버 대상)
```

---

## 6. 본인 취소

```
FUNCTION cancel(challengeId, userId, cancelReason?):

  [선행 검증]
  - member.status = CANCEL → 이미 취소됨, 멱등 처리 후 종료
  - member.status ∉ {REQUEST, APPROVE} → 취소 불가
  - Challenge.status ≠ RECRUITING → CONFIRM_PLAYING 이후 본인 취소 불가

  wasApprove = (member.status = APPROVE)

  [트랜잭션]
  BEGIN:
    ChallengeMember.status → CANCEL, canceledAt = NOW()
    ChallengeMember.cancelReason = cancelReason

    IF wasApprove:
      ChallengeRank 삭제
      ChallengeHistory 삭제
      Challenge.availCount += 1
  COMMIT

  [후처리 — 트랜잭션 외부]
  IF wasApprove:
    Sendbird 채널 퇴장
  결제 취소/환불 처리 (챌린지 결제/환불 규칙 명세서 §3-1)
```

---

## 7. 스케줄러 처리 규칙

### 7-1. REQUEST 24시간 미승인 자동 취소

```
[스케줄러: 10분마다]

대상:
  ChallengeMember.status = REQUEST
  AND updatedAt < NOW() - 24시간
  AND Challenge.status = RECRUITING  (CONFIRM_PLAYING 이후는 처리 대상 아님)

FOR EACH 대상 멤버:
  [트랜잭션]
  BEGIN:
    ChallengeMember.status → CANCEL, canceledAt = NOW()
    ← availCount 변화 없음 (REQUEST는 정원 미차지)
  COMMIT

  [취소 처리 위임 → 주문 도메인] (TX 외부)
  결제 취소/환불 처리 (챌린지 결제/환불 규칙 명세서 §3)
  Push 발송 (H13: 미승인 자동 취소 안내)
```

### 7-2. 모집 마감 전환 (매주 토요일 23시)

```
[스케줄러: 매주 토요일 23:00 KST, cron '0 0 23 * * 6']

대상:
  Challenge.status = RECRUITING
  AND startDate ≤ NOW() + 2시간

창 해석:
  토요일 23:00 + 2h = 일요일 01:00
  startDate는 유저 API로 생성 시 항상 "일요일 00:00"(1-5 참조)이므로
  정상 케이스는 모두 이 창 안에 들어온다.
  어드민 API로 일요일 01:00 이후 시각 또는 비-일요일로 생성된 챌린지는
  이 스케줄러가 전이시키지 못하므로 별도 처리 필요.

처리:
  APPROVE 멤버 수 집계

  ── ≥ 2명 (CONFIRM_PLAYING 전이) ──

  [단일 트랜잭션 — 상태 전이 원자화]
  BEGIN TX:
    Challenge.status = CONFIRM_PLAYING

    FOR EACH member WHERE status = REQUEST:
      ChallengeMember.status → CANCEL, canceledAt = NOW()
      cancelReason = "호스트미승인 - 자동취소"
      ← availCount 변화 없음 (REQUEST는 정원 미차지)
  COMMIT

  [취소 처리 위임 → 주문 도메인] (TX 외부)
  환불 실행 및 실패 복구 흐름은 5-4와 동일.
  크래시로 인한 상태 불일치 Order는 Sweeper 스케줄러가 복구 (WEBB-1326).

  ── < 2명 (CLOSE_BY_SYSTEM 전이) ──

  [단일 트랜잭션 — 상태 전이 원자화]
  BEGIN TX:
    Challenge.status = CLOSE_BY_SYSTEM

    FOR EACH member WHERE status ∈ {REQUEST, APPROVE}:
      wasApprove = (member.status = APPROVE)
      ChallengeMember.status → CANCEL, canceledAt = NOW()
      IF wasApprove:
        ChallengeRank 삭제
        ChallengeHistory 삭제
        Challenge.availCount += 1
  COMMIT

  [취소 처리 위임 → 주문 도메인] (TX 외부)
  전체 전액 환불 처리 (챌린지 결제/환불 규칙 명세서 §3-3)
  크래시로 인한 상태 불일치 Order는 Sweeper 스케줄러가 복구 (WEBB-1326).

  [알림]
  SMS_062 발송 (인원 미달 안내)
```

### 7-3. 챌린지 완료 전환 (매일 자정)

```
대상:
  Challenge.status = CONFIRM_PLAYING
  AND endDate < NOW()

처리:
  Challenge.status = COMPLETE
  호스트의 userSummary.challengeCount + 1
  다음 주 일요일: Sendbird 봇 메시지 (챌린지 후기 링크)
```

---

## 8. ChallengeRank 및 인증 규칙

```
ChallengeRank
  생성: REQUEST → APPROVE 시점
  삭제: APPROVE → REJECT/CANCEL/DELETE 시점

  count 증가: ChallengeHistory 생성 시 (피드 인증)
  랭킹: count DESC 기준, 동점 시 동일 순위 (1, 1, 3, ...)

ChallengeHistory
  생성: 멤버가 챌린지 피드 태그로 인증 제출 시
  삭제: 멤버가 강퇴/취소될 때 (APPROVE → REJECT/CANCEL)
  제약: (challengeId, userId, confirmedAt) UNIQUE
```

---

## 9. availCount 요약

| 이벤트 | availCount 변화 |
| --- | --- |
| COMMON 가입 | -1 |
| CHOICE 가입 (REQUEST) | 변동 없음 |
| REQUEST → APPROVE | -1 |
| APPROVE → CANCEL | +1 |
| APPROVE → REJECT (강퇴) | +1 |
| REQUEST → CANCEL/REJECT | 변동 없음 |
| maximumMembers 변경 | `availCount = newMax - COUNT(APPROVE)` |

---

<aside>
🔁

## **변경 이력**

</aside>

| **버전** | **일자** | **변경자** | **변경 내용** |
| --- | --- | --- | --- |
| v1.0.0 | 26.04.16 | 김범진 | 최초 작성 |
| v1.0.1 | 26.04.20 | 김범진 | 챌린지 폐강 시 전액 환불로 규칙 수정 |
| v1.1.0 | 26.04.21 | 김범진 | 기존 규칙 모순·누락 해소 및 소셜링 도메인 기준 재정렬(전체 재작성) |